--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/header.css
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/header.css
@@ -65,6 +65,7 @@ body > header > div:nth-child(2) > div:nth-child(1) > a {
   color: rgb(53, 53, 53);
   text-decoration: none;
   font-family: "Roboto", sans-serif;
+  cursor: pointer;
 }
 body > header > div:nth-child(2) > div:nth-child(1) > a:hover {
   color: rgb(0, 0, 0);
@@ -98,6 +99,7 @@ body > div:nth-child(2) {
   color: rgb(53, 53, 53);
   text-decoration: none;
   font-family: "Roboto", sans-serif;
+  cursor: pointer;
 }
 .offcanvas-body > div > a:hover {
   color: rgb(0, 0, 0);
