--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/iniciosesion.css
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/iniciosesion.css
@@ -36,6 +36,8 @@
 .botonInicioSesion {
   background-color: black;
   color: white;
+  text-align: center;
+  text-decoration: none;
   border: 0;
   border-radius: 10px;
   padding-top: 6px;
